--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 
   <body>
     <div class="container">
+      <!-- Greeting Section -->
       <div class="one">
-        <h1 class="one">Hey <span id="name">-----------------</span></h1>
+        <h1 class="one">Hey <span id="name">Dharam Singh</span></h1>
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
 
+      <!-- Question Section -->
       <div class="three">
         <p>HERE IS SOMETHING I HAVE TO ASK T-T</p>
       </div>
 
+      <!-- Chatbox Section -->
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">Will You Be My Valentine Love and blah blah...</p>
@@ -29,6 +32,7 @@
         </div>
       </div>
 
+      <!-- Special Message Section -->
       <div class="five">
         <p class="idea-1">That's what I was going to do.</p>
         <p class="idea-2">But then I stopped.</p>
@@ -41,8 +45,9 @@
         </p>
       </div>
 
+      <!-- Main Image & Audio Section -->
       <div class="six">
-        <img src="img/vector.jpg" alt="Valentine illustration" class="girl-dp" id="imagePath" />
+        <img src="img/new-image.jpg" alt="Valentine illustration" class="girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Will You Be My Valentine Cutu</h3>
           <h5 id="wishText">kuch kuch</h5>
@@ -54,6 +59,7 @@
         </div>
       </div>
 
+      <!-- Balloons Section -->
       <div class="seven">
         <div class="baloons">
           <img src="img/balloon.svg" alt="Balloon" />
@@ -78,11 +84,8 @@
         </div>
       </div>
 
+      <!-- Floating Circles Section -->
       <div class="eight">
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
         <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
         <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
         <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
@@ -90,6 +93,7 @@
         <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
       </div>
 
+      <!-- Replay & GitHub Link Section -->
       <div class="nine">
         <p>Okay, now come back and tell me if you liked it.</p>
         <p id="replay">Or click, if you want to watch it again.</p>
@@ -102,7 +106,9 @@
       </div>
     </div>
 
+    <!-- GSAP Animation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <!-- Custom JS -->
     <script src="script/main.js"></script>
   </body>
 </html>
